--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = kandidatAPI.settings-test
+DJANGO_SETTINGS_MODULE = kandidatAPI.settings
 addopts = -v -s --cov=kandidat/tests/ --no-cov-on-fail
