--- a/pytest-prod.ini
+++ b/pytest-prod.ini
@@ -1,3 +1,3 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = kandidatAPI.settings-prod
+DJANGO_SETTINGS_MODULE = kandidatAPI.settings
 addopts = -v -s --cov=kandidat/tests/ --no-cov-on-fail
